# mtas

./: CMakeLists.txt  README.md
demos/: add_gsm_global.sh  after_mtivm_conversion.mlir  bufferize_issue.mlir  conversionResult.mlir  matmul_elemwise.ll  matmul_elemwise.mlir  matmul_elemwise_llvm.mlir  matmul_micro_kernel.mlir  mtivm_mlir_17_tmp.mlir  mtivm_mlir_18_tmp.mlir  multi-buffering-notes.mlir  run.sh  run_lowering_passes.sh  sgemm_mtir_kernel.ll  test_one_shot.mlir  tmp.mlir
include/mtas/: InitAllDialects.h  InitAllPasses.h
include/mtas/Conversion/: CMakeLists.txt  Passes.h  Passes.td
include/mtas/Conversion/MemRefToPtr/: MemRefToPtr.h
include/mtas/Dialect/: CMakeLists.txt
include/mtas/Dialect/Ftm/IR/: CMakeLists.txt  Ftm.h  FtmAttrs.td  FtmBase.td  FtmDoc.td  FtmEnums.td  (+1 more)
lib/Conversion/: CMakeLists.txt
lib/Conversion/MemRefToPtr/: CMakeLists.txt  MemRefToPtr.cpp
lib/Dialect/Ftm/IR/: CMakeLists.txt  FtmDialect.cpp  FtmOps.cpp
lib/Dialect/Ftm/Transforms/: AddressBaseTransformation.cpp  AllocateOffsetRegisters.cpp  CMakeLists.txt  CastPtrToInt64.cpp  FoldRegisterAlloca.cpp  LoopFolding.cpp  LoopStrengthReduce.cpp  LoopUnrolling.cpp  LowerFillOps.cpp.txt  LowerKernelArguments.cpp  LowerLinalgOps.cpp  LowerLoadAndStoreMemRefToPtr.cpp  LowerMatmulToFma.cpp  MultiBuffering.cpp  SplitMatmul.cpp  TileDynamicDims.cpp  TileLinalgDims.cpp
lib/Dialect/Mtasm/IR/: CMakeLists.txt  MtasmDialect.cpp  MtasmOps.cpp
lib/Dialect/Mtasm/Transforms/: CMakeLists.txt  LoopUnrolling.cpp  MultiBuffering.cpp  TileDynamicDims.cpp
mtas-opt/: CMakeLists.txt  mtas-opt.cpp
(+13 files in other folders)
